--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -18,20 +18,21 @@
                     <tbody>
                         <tr *ngFor="let item of products; let i = index">
                             <td>{{i+1}}</td>
-                            <td>{{item.title}}</td>
-                            <td><img style="width: 120px;" src="{{item.image}}" alt=""></td>
+                            <td style="width: 15%;">{{item.name}}</td>
+                            <td><img style="width: 100px;" src="{{item.image}}" alt=""></td>
                             <td style="width: 25%;">{{item.description}}</td>
                             <th style="width: 15%;">{{item.price}}</th>
-                            <td style="width: 15%;">{{item.cantidad}}</td>
+                            <td style="width: 15%;"><input [(ngModel)]="item.cantidad" type="number"  [min]="1" [max]="item.stock" /></td>
                             <td style="width: 15%;">{{item.total}}</td>
                             <td>
                                 <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="5"></td>
-                            <td><button (click)="emptycart()" class="btn btn-danger">Vaciar carrito</button></td>
-                            <td><button routerLink="/products" class="btn btn-primary">Comprar mas</button></td>
+                            <td colspan="4"></td>
+                            <td><button (click)="emptyCart()" class="btn btn-dark">Limpiar</button></td>
+                            <td><button routerLink="/products" class="btn btn-secondary">Comprar mas</button></td>
+                            <td><button (click)="saveCart()" class="btn btn-info">Guardar</button></td>
                             <td style="width: 20%;"><strong>Total : ${{grandTotal}}</strong></td>
                         </tr>
                     </tbody>
