--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -10,17 +10,15 @@
     border-radius: .25rem;
 }
 
-.item img {
-    width: 64px;
-}
 
 .item {
     margin: 0px 5px;
     text-align: center;
 }
 
-.card a:hover {
-    color: blue;
+.card:hover {
+    transition: 0.5s ease-in-out,;
+    transform: scale(1.05);
 }
 
 .card {
@@ -35,7 +33,7 @@
     transition: 0.3s ease-in-out;
 }
 
-.card img:hover {
+/* .card img:hover {
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
-}
+} */
