--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -2,29 +2,21 @@
     <div class="container" >
         <div class="row">
             <ng-container *ngFor="let item of filterProduct | filter:searchKey:'name'">
-                <div class="card col-md-3">
+                <div class="card col-sm-6 col-md-3">
                     <img src="{{item.image}}" alt="">
                     <h5 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">{{item.name}}</h5>
                     <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">{{item.description}}</p>
+                    
                     <div class="row">
                         <div class="col-md-6">
-                            <p>Cantidad: </p>
-                        </div>
-                        <div class="col-md-6">
-                            <input [(ngModel)]="item.cantidad" type="number"  [min]="1" [max]="item.stock" />
-                        </div>
-                        
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p><strong>Price:</strong> ${{item.price}}</p>
+                            <p><strong>Precio:</strong> ${{item.price}}</p>
                         </div>
                         <div class="col-md-6">
                             <p><strong>Stock:</strong> {{item.stock}}</p>
                         </div>
                     </div>
                     
-                    <button class="btn btn-secondary" (click)=addtocart(item)>Add to cart</button>
+                    <button class="btn btn-info" (click)=addtocart(item)>Añadir al carrito</button>
                 </div>
             </ng-container>
 
