--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                     
-                    <button class="btn btn-info" (click)=addtocart(item)>Añadir al carrito</button>
+                    <button class="btn btn-info" (click)=addtocart(item)><i class="fa-regular fa-heart"style="font-size: 15px;"></i> Añadir a lista de deseos</button>
                 </div>
             </ng-container>
 
