--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -18,7 +18,10 @@ h4,
 h6 {
     font-weight: 400;
 }
-
+.buttons{
+    align-items: flex-center;
+    justify-content :end;
+}
 .center {
     position: absolute;
     top: 50%;
@@ -26,7 +29,9 @@ h6 {
     transform: translate(-50%, -50%);
     text-align: center;
 }
-
+.table-responsive{
+    display:inline-table;
+}
 .card-table {
     position: relative;
     display: flex;
@@ -45,4 +50,7 @@ h6 {
     font-weight: 400;
     padding: 12px 50px;
     border-radius: 3px !important;
+}
+.noexist{
+    background-color: red;
 }
